--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -8,5 +8,5 @@
   - include_tasks: tasks/fonts.yml
   - include_tasks: tasks/notepadqq.yml
   - include_tasks: tasks/rainlendar.yml
-  - include_tasks: tasks/onedrivegui.yml
+#  - include_tasks: tasks/onedrivegui.yml
   - include_tasks: tasks/sshd.yml
