--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -12,10 +12,10 @@
       - exa
       - ncdu
       - bat
-#      - onedrive
-#      - python3-pip
-#      - samba
-#      - cifs-utils
+      - onedrive
+      - python3-pip
+      - samba
+      - cifs-utils
     state: latest
 
 - name: install debian specific packages
@@ -36,6 +36,5 @@
     name:
       - cairo-dock
       - duf
-#      - code
     state: latest
   when: ansible_distribution == "Fedora"
