--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -38,3 +38,13 @@
       - duf
     state: latest
   when: ansible_distribution == "Fedora"
+
+- name: install openh264
+  tags: fedora,base,openh264
+  dnf:
+    name:
+      - gstreamer1-plugin-openh264
+      - mozilla-openh264
+    enablerepo: fedora-cisco-openh264
+    state: present
+  when: ansible_distribution == "Fedora"
