updates and adding Lubuntu

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,4 +9,5 @@
   - include_tasks: tasks/notepadqq.yml
   - include_tasks: tasks/rainlendar.yml
   - include_tasks: tasks/onedrivegui.yml
+  - include_tasks: tasks/moderndeck.yml
   - include_tasks: tasks/sshd.yml
