--- a/roles/fedora/tasks/autostart.yml
+++ b/roles/fedora/tasks/autostart.yml
@@ -5,3 +5,19 @@
     dest: /home/{{ user }}/.config
     owner: "{{ user }}"
     group: "{{ user }}"
+
+- name: edit user on OneDriveGUI entry
+  tags: onedrive
+  lineinfile:
+    path: ~/.config/autostart/onedrive.desktop
+    regexp: '^Exec='
+    line: Exec=/home/{{ user }}/Downloads/OneDriveGUI-*-x86_64.AppImage
+  when: ansible_distribution == "Fedora"
+
+- name: edit user on rainlendar entry
+  tags: rainlendar
+  lineinfile:
+    path: ~/.config/autostart/rainlendar2.desktop
+    regexp: '^Exec='
+    line: Exec=/home/{{ user }}/rainlendar2/rainlendar2
+  when: ansible_distribution == "Fedora"
