updated Google chat

--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -49,6 +49,8 @@
       - smbclient
       - cairo-dock
       - duf
+      - pkg-config
+      - libpurple-dev
     state: latest
   when: flavor == "Lubuntu"
 
