--- a/roles/base/tasks/onedrivegui.yml
+++ b/roles/base/tasks/onedrivegui.yml
@@ -23,6 +23,6 @@
 - name: download OneDriveGUI
   tags: onedrive
     get_url:
-      url: https://github.com/bpozdena/OneDriveGUI/releases/download/*/OneDriveGUI-*-x86_64.AppImage
+      url: https://github.com/bpozdena/OneDriveGUI/releases/download/v1.0.1/OneDriveGUI-1.0.1-x86_64.AppImage
       dest: /home/{{ user }}/Downloads
       mode: +x
