--- a/roles/base/tasks/moderndeck.yml
+++ b/roles/base/tasks/moderndeck.yml
@@ -1,6 +1,6 @@
 - name: install ModernDeck
   tags: moderndeck
   get_url:
-    url: https://github.com/dangeredwolf/ModernDeck/releases/download/*/ModernDeck_x86_64.AppImage
+    url: https://github.com/dangeredwolf/ModernDeck/releases/download/v9.4.5/ModernDeck_x86_64.AppImage
     dest: /home/{{ user }}/Downloads
     mode: +x
