--- a/roles/debian/tasks/zsh-alias.yml
+++ b/roles/debian/tasks/zsh-alias.yml
@@ -30,14 +30,14 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
-- name: source .zshrc file
-  tags: alias,zsh
-  shell: bash -c 'source /home/{{ user }}/.zshrc 2> /dev/null'
-#  ignore_errors: true
+# - name: source .zshrc file
+#   tags: alias,zsh
+#   shell: bash -c 'source /home/{{ user }}/.zshrc 2> /dev/null'
+# #  ignore_errors: true
 
-- name: source aliasrc file
-  tags: alias,zsh
-  shell: bash -c 'source /home/{{ user }}/aliasrc 2> /dev/null'
+# - name: source aliasrc file
+#   tags: alias,zsh
+#   shell: bash -c 'source /home/{{ user }}/aliasrc 2> /dev/null'
 
 - name: change shell
   tags: zsh,shell
