testing flavor test

--- a/local.yml
+++ b/local.yml
@@ -17,7 +17,7 @@
     - command: cat /var/log/installer/media-info
       register: flavor
     - debug:
-        var: flavor
+        msg=flavor
 
 - hosts: localhost
   connection: local
