testing flavor test

--- a/local.yml
+++ b/local.yml
@@ -14,7 +14,8 @@
   # vars:
   #   flavor: "{{ media_info.stdout.split()|first }}"
   tasks:
-    - command: cat /var/log/installer/media-info | awk '{print $1}'
+    - shell:
+        cmd: cat /var/log/installer/media-info | awk '{print $1}'
       register: flavor
     # - debug:
     #     msg="{{ cat /var/log/installer/media-info | awk '{print $1}' }}"
