--- a/local.yml
+++ b/local.yml
@@ -21,12 +21,12 @@
         # msg="{{ cat /var/log/installer/media-info | awk '{print $1}' }}"
         msg= {{flavor.stdout}}
 
-- name: tilix settings
-  shell:
-    cmd: cat /var/log/installer/media-info | awk '{print $1}'
-  register: flavor
-  args:
-    executable: /bin/bash
+# - name: tilix settings
+#   shell:
+#     cmd: cat /var/log/installer/media-info | awk '{print $1}'
+#   register: flavor
+#   args:
+#     executable: /bin/bash
 
 
 - hosts: localhost
