--- a/local.yml
+++ b/local.yml
@@ -10,23 +10,23 @@
         name: "*"
         state: latest
 
-  name: get flavor
-  # vars:
-  #   flavor: "{{ media_info.stdout.split()|first }}"
-  tasks:
-    - shell:
-        cmd: cat /var/log/installer/media-info | awk '{print $1}'
-      register: flavor
-    - debug:
-        # msg="{{ cat /var/log/installer/media-info | awk '{print $1}' }}"
-        msg= {{flavor.stdout}}
+  # name: get flavor
+  # # vars:
+  # #   flavor: "{{ media_info.stdout.split()|first }}"
+  # tasks:
+  #   - shell:
+  #       cmd: cat /var/log/installer/media-info | awk '{print $1}'
+  #     register: flavor
+  #   - debug:
+  #       # msg="{{ cat /var/log/installer/media-info | awk '{print $1}' }}"
+  #       msg= {{flavor}}
 
-# - name: tilix settings
-#   shell:
-#     cmd: cat /var/log/installer/media-info | awk '{print $1}'
-#   register: flavor
-#   args:
-#     executable: /bin/bash
+- name: get flavor
+  shell:
+    cmd: cat /var/log/installer/media-info | awk '{print $1}'
+  register: flavor
+  args:
+    executable: /bin/bash
 
 
 - hosts: localhost
