testing flavor test

--- a/local.yml
+++ b/local.yml
@@ -21,14 +21,25 @@
   #       # msg="{{ cat /var/log/installer/media-info | awk '{print $1}' }}"
   #       msg= {{flavor}}
 
-    - name: get flavor
-      shell:
+  name: get flavor
+  tasks:
+    - shell:
         cmd: cat /var/log/installer/media-info | awk '{print $1}'
       register: flavor
       args:
         executable: /bin/bash
       debug:
         msg={{flavor.stdout}}
+
+
+  - name: get flavor
+    shell:
+      cmd: cat /var/log/installer/media-info | awk '{print $1}'
+    register: flavor
+    args:
+      executable: /bin/bash
+    debug:
+      msg={{flavor.stdout}}
 
 
 - hosts: localhost
