--- a/local.yml
+++ b/local.yml
@@ -10,17 +10,6 @@
         name: "*"
         state: latest
 
-  # name: get flavor
-  # # vars:
-  # #   flavor: "{{ media_info.stdout.split()|first }}"
-  # tasks:
-  #   - shell:
-  #       cmd: cat /var/log/installer/media-info | awk '{print $1}'
-  #     register: flavor
-  #   - debug:
-  #       # msg="{{ cat /var/log/installer/media-info | awk '{print $1}' }}"
-  #       msg= {{flavor}}
-
   name: get flavor
   tasks:
     - shell:
@@ -31,16 +20,15 @@
     - debug:
         msg={{flavor.stdout}}
 
-
-  # - name: get flavor
-  #   shell:
-  #     cmd: cat /var/log/installer/media-info | awk '{print $1}'
-  #   register: flavor
-  #   args:
-  #     executable: /bin/bash
-  #   debug:
-  #     msg={{flavor.stdout}}
-
+  name: get flavor
+  tasks:
+    - shell:
+        cmd: cat /var/log/installer/media-info | awk '{print $1}'
+      register: flavor
+      args:
+        executable: /bin/bash
+    - debug:
+        msg={{flavor.stdout}}
 
 - hosts: localhost
   connection: local
@@ -59,4 +47,4 @@
     - role: debian
       when: ansible_distribution == "Debian"
     - role: lubuntu
-      when: flavor.stdout == "Lubuntu"
+      when: flavor == "Lubuntu"
