--- a/local.yml
+++ b/local.yml
@@ -20,16 +20,6 @@
     - debug:
         msg={{flavor.stdout}}
 
-  name: get flavor
-  tasks:
-    - shell:
-        cmd: cat /var/log/installer/media-info | awk '{print $1}'
-      register: flavor
-      args:
-        executable: /bin/bash
-    - debug:
-        msg={{flavor.stdout}}
-
 - hosts: localhost
   connection: local
   tags: base
@@ -47,4 +37,4 @@
     - role: debian
       when: ansible_distribution == "Debian"
     - role: lubuntu
-      when: flavor == "Lubuntu"
+      when: flavor.stdout == "Lubuntu"
