--- a/roles/base/tasks/pidgin_dependencies.yml
+++ b/roles/base/tasks/pidgin_dependencies.yml
@@ -22,5 +22,5 @@
       - make
       - pkg-config
       - libpurple-dev
-  when: ansible_distribution == "Debian" or flavor == "Lubuntu"
+  when: ansible_distribution == "Debian" or flavor.stdout == "Lubuntu"
 
