adding void role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,4 @@
 [defaults]
 log_path = /var/log/ansible.log
+callbacks_enabled = timer, profile_tasks, profile_roles
+interpreter_python = auto_silent
