--- a/roles/void/tasks/i3config.yml
+++ b/roles/void/tasks/i3config.yml
@@ -47,6 +47,13 @@
   args:
     executable: /bin/bash
 
+- name: wallpaper
+  copy:
+    src: files/i3wm-2560×1440.jpg
+    dest: /usr/share/wallpapers
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
 # - name: edit i3 config
 #   tags: i3
 #   lineinfile:
