--- a/roles/void/tasks/main.yml
+++ b/roles/void/tasks/main.yml
@@ -1,12 +1,12 @@
 # Void specific tasks
 - block:
-  - include_tasks: packages.yml
+  - include_tasks: tasks/packages.yml
   - include_tasks: ../fedora/tasks/nano.yml
   - include_tasks: ../fedora/tasks/btop.yml
   - include_tasks: ../fedora/tasks/oh-my-posh.yml
   - include_tasks: ../fedora/tasks/tilix_config.yml
-  - include_tasks: zsh-alias.yml
+  - include_tasks: tasks/zsh-alias.yml
   - include_tasks: ../base/tasks/fonts.yml
-  - include_tasks: i3config.yml
-  - include_tasks: lightdm.yml
-  - include_tasks: samba.yml
+  - include_tasks: tasks/i3config.yml
+  - include_tasks: tasks/lightdm.yml
+  - include_tasks: tasks/samba.yml
