--- a/roles/lubuntu/tasks/tilix_config.yml
+++ b/roles/lubuntu/tasks/tilix_config.yml
@@ -1,7 +1,7 @@
 - name: download tilix conf file
   tags: tilix
   copy:
-    src: lubuntu/files/tilix.dconf
+    src: files/tilix.dconf
     dest: /home/{{ user }}/
     owner: "{{ user }}"
     group: "{{ user }}"
