fixing void i3 config

--- a/roles/void/tasks/i3config.yml
+++ b/roles/void/tasks/i3config.yml
@@ -1,13 +1,13 @@
 - name: back up i3 config file
   tags: samba
   copy:
-    src: /.config/i3/config
-    dest: /.config/i3/config.bak
+    src: /home/{{ user }}/.config/i3/config
+    dest: /home/{{ user }}/.config/i3/config.bak
 
 - name: add lines to i3 config file
   tags: i3
   blockinfile:
-    path: /.config/i3/config
+    path: /home/{{ user }}/.config/i3/config
     block: |
       # switch between workspaces
       bindsym $mod+Control+Left workspace prev
@@ -19,7 +19,7 @@
 - name: add line to i3 config file
   tags: i3
   lineinfile:
-    path: /.config/i3/config
+    path: /home/{{ user }}/.config/i3/config
     insertbefore: '#Font for window titles.*'
     line: "set $mod Mod4"
     state: present
@@ -27,7 +27,7 @@
 - name: edit i3 config
   tags: i3
   lineinfile:
-    path: /.config/i3/config
+    path: /home/{{ user }}/.config/i3/config
     regexp: '^bindsym $mod+Return'
     line: '# \1'
     backrefs: yes
@@ -36,7 +36,7 @@
 - name: edit i3 config
   tags: i3
   lineinfile:
-    path: /.config/i3/config
+    path: /home/{{ user }}/.config/i3/config
     insertafter: '# bindsym $mod+Return *'
     line: "bindsym $mod+Return exec tilix"
     state: present
