--- a/roles/void/tasks/i3config.yml
+++ b/roles/void/tasks/i3config.yml
@@ -1,15 +1,15 @@
-# - name: check if i3 config file exists
-#   tags: i3
-#   stat:
-#     path: /home/{{ user }}/.config/i3/config
-#     register: i3config
+- name: check if i3 config file exists
+  tags: i3
+  stat:
+    path: /home/{{ user }}/.config/i3/config
+    register: i3config
 
-# - name: back up i3 config file
-#   tags: i3
-#   copy:
-#     src: /home/{{ user }}/.config/i3/config
-#     dest: /home/{{ user }}/.config/i3/config.bak
-#   when: i3config.stat.exists
+- name: back up i3 config file
+  tags: i3
+  copy:
+    src: /home/{{ user }}/.config/i3/config
+    dest: /home/{{ user }}/.config/i3/config.bak
+  when: i3config.stat.exists
 
 - name: install i3 config file
   tags: i3
@@ -18,11 +18,18 @@
     dest: /home/{{ user }}/.config/i3/config
     backup: yes
 
-# - name: back up picom.conf file
-#   tags: picom,i3
-#   copy:
-#     src: /home/{{ user }}/.config/picom/picom.conf
-#     dest: /home/{{ user }}/.config/picom/picom.conf.bak
+- name: check if picom config file exists
+  tags: picom
+  stat:
+    path: /home/{{ user }}/.config/picom/picom.conf
+    register: picomconfig
+
+- name: back up picom.conf file
+  tags: picom,i3
+  copy:
+    src: /home/{{ user }}/.config/picom/picom.conf
+    dest: /home/{{ user }}/.config/picom/picom.conf.bak
+  when: picom.stat.exists
 
 - name: install picom config file
   tags: picom,i3
