--- a/roles/void/tasks/directories.yml
+++ b/roles/void/tasks/directories.yml
@@ -11,3 +11,6 @@
 #      - ".local/share/themes"
 #      - ".local/share/icons"
       - ".poshthemes"
+      - ".config"
+      - ".config/i3"
+      - ".config/picom"
