--- a/roles/void/tasks/i3config.yml
+++ b/roles/void/tasks/i3config.yml
@@ -51,7 +51,7 @@
 - name: wallpaper
   copy:
     src: files/i3wm-2560×1440.jpg
-    dest: /usr/share/wallpapers
+    dest: /usr/share/wallpapers/
     owner: "{{ user }}"
     group: "{{ user }}"
 
