--- a/roles/void/tasks/lightdm.yml
+++ b/roles/void/tasks/lightdm.yml
@@ -13,21 +13,21 @@
     regexp: '^#display-setup-script='
     line: 'display-setup-script=xrandr --output Virtual-1 --mode 1650x1050'
 
-- name: create lightdm link 
-  tags: lightdm
-  file:
-    src: /etc/sv/lightdm
-    dest: /var/service
-    owner: root
-    group: root
-    state: link
+# - name: create dbus link 
+#   tags: dbus
+#   file:
+#     src: /etc/sv/dbus
+#     dest: /var/service
+#     owner: root
+#     group: root
+#     state: link
 
-- name: create dbus link 
-  tags: dbus
-  file:
-    src: /etc/sv/dbus
-    dest: /var/service
-    owner: root
-    group: root
-    state: link
+# - name: create lightdm link 
+#   tags: lightdm
+#   file:
+#     src: /etc/sv/lightdm
+#     dest: /var/service
+#     owner: root
+#     group: root
+#     state: link
 
