--- a/roles/void/tasks/main.yml
+++ b/roles/void/tasks/main.yml
@@ -9,4 +9,4 @@
   - include_tasks: tasks/i3config.yml
   - include_tasks: tasks/lightdm.yml
   - include_tasks: tasks/samba.yml
-  - include_tasks: ../lubuntu/tasks/tilix_config.yml
+  # - include_tasks: ../lubuntu/tasks/tilix_config.yml
