--- a/roles/void/tasks/lightdm.yml
+++ b/roles/void/tasks/lightdm.yml
@@ -25,7 +25,7 @@
   lineinfile:
     path: /etc/lightdm/lightdm.conf
     regexp: '^#display-setup-script='
-    line: 'display-set up-script=xrandr --output Virtual1 --mode 1920x1080'
+    line: 'display-setup-script=xrandr --output Virtual1 --mode 1920x1080'
 
 # - name: create lightdm link 
 #   tags: lightdm
