--- a/roles/void/tasks/main.yml
+++ b/roles/void/tasks/main.yml
@@ -1,12 +1,22 @@
 # Void specific tasks
 - block:
-  # - include_tasks: tasks/packages.yml
-  # - include_tasks: tasks/lightdm.yml
-  # - include_tasks: directories.yml
-  # - include_tasks: tasks/i3config.yml
-  # - include_tasks: ../fedora/tasks/nano.yml
-  # - include_tasks: ../fedora/tasks/oh-my-posh.yml
-  # - include_tasks: tasks/zsh-alias.yml
-  # - include_tasks: ../base/tasks/fonts.yml
+  - include_tasks: tasks/packages.yml
+    when: stage=1
+  - include_tasks: tasks/lightdm.yml
+    when: stage=1
+  - include_tasks: directories.yml
+    when: stage=2
+  - include_tasks: tasks/i3config.yml
+    when: stage=2
+  - include_tasks: ../fedora/tasks/nano.yml
+    when: stage=2
+  - include_tasks: ../fedora/tasks/oh-my-posh.yml
+    when: stage=2
+  - include_tasks: tasks/zsh-alias.yml
+    when: stage=2
+  - include_tasks: ../base/tasks/fonts.yml
+    when: stage=2
   - include_tasks: ../lubuntu/tasks/tilix_config.yml
+    when: stage=2
   - include_tasks: tasks/samba.yml
+    when: stage=2
