--- a/roles/void/tasks/packages.yml
+++ b/roles/void/tasks/packages.yml
@@ -46,7 +46,9 @@
       - chromium
       - vscode
       - nerd-fonts
-
+      - quiterss
+      - arc-theme
+      - arc-icon-theme
 
       # - xinit
       # - linux-headers
