--- a/local.yml
+++ b/local.yml
@@ -26,7 +26,7 @@
   become: true
   roles:
     - role: base
-      when: ansible_distribution != "Void"
+      when: ansible_distribution != "Void" or ansible_distribution != "Ubuntu"
 
 - hosts: localhost
   connection: local
@@ -41,3 +41,5 @@
       when: flavor.stdout == "Lubuntu"
     - role: void
       when: ansible_distribution == "Void"
+    - role: ubuntu
+      when: ansible_distribution == "Ubuntu"
