--- a/roles/ubuntu/tasks/main.yml
+++ b/roles/ubuntu/tasks/main.yml
@@ -5,7 +5,7 @@
   - include_tasks: ../debian/tasks/zsh-alias.yml
   # - include_tasks: theme-config.yml
   # - include_tasks: xfconf.yml
-  - include_tasks: tilix_config.yml
+  - include_tasks: ../lubuntu/tasks/tilix_config.yml
   # - include_tasks: autologin.yml
   - include_tasks: ../debian/tasks/samba.yml
   - include_tasks: ../lubuntu/tasks/vscodium.yml
